--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-Revision history for Perl extension Filesystem::DiskFree.
+Revision history for Perl extension Filesys::DiskFree.
+
+0.02  Thu Jul 23 15:13:20 1998
+	- Fixed a mistake in the documentation 
 
 0.01  Tue Jul 14 10:32:48 1998
 	- original version; created by h2xs 1.18
