--- a/README
+++ b/README
@@ -1,11 +1,10 @@
 NAME
-    Filesystem::DiskFree -- perform the Unix command 'df' in a portable
-    fashion
+    Filesys::DiskFree -- perform the Unix command 'df' in a portable fashion
 
 SYNOPSIS
-        use Filesystem::DiskFree;
+        use Filesys::DiskFree;
 
-        $handle = new Disk:Free;
+        $handle = new Filesys::DiskFree;
         $handle->df();
         print "The root device is ".$handle->device("/")."\n";
         print "It has ".$handle->avail("/")." bytes available\n";
@@ -13,13 +12,12 @@ SYNOPSIS
         print "It has ".$handle->used("/")." bytes used\n";
 
 DESCRIPTION
-    Filesystem::DiskFree does about what the unix command df(1) does,
-    listing the mounted disks, and the amount of free space used &
-    available.
+    Filesys::DiskFree does about what the unix command df(1) does, listing
+    the mounted disks, and the amount of free space used & available.
 
   Functions
 
-    Filesystem::DiskFree->set('option' => 'value')
+    Filesys::DiskFree->set('option' => 'value')
         Sets various options within the module.
 
         The most common option to change is the mode, which can be either
@@ -31,47 +29,47 @@ DESCRIPTION
 
         Returns the previous values of the options.
 
-    Filesystem::DiskFree->df()
+    Filesys::DiskFree->df()
         Perfoms a 'df' command, and stores the values for later use.
 
-    Filesystem::DiskFree->command()
+    Filesys::DiskFree->command()
         Returns the appropriate command to do a 'df' command, for the
         current format. This is used when you wish to call a df on a remote
         system. Use the df() method for local df's.
 
         Returns undef if there isn't an appropriate command.
 
-    Filesystem::DiskFree->load($line)
+    Filesys::DiskFree->load($line)
         Reads in the output of a 'df', $line can be either a scalar or a
         filehandle. If $line is a filehandle, then the filehandle is read
         until EOF.
 
         Returns undef on failure
 
-    Filesystem::DiskFree->disks()
+    Filesys::DiskFree->disks()
         Returns all the disks known about
 
-    Filesystem::DiskFree->device($id)
+    Filesys::DiskFree->device($id)
         Returns the device for $id, which is a scalar containing the device
         name of a disk or a filename, in which case the disk that filename
         in stored upon is used.
 
-    Filesystem::DiskFree->mount($id)
+    Filesys::DiskFree->mount($id)
         Returns the mount point for $id, which is a scalar containing the
         device name of a disk or a filename, in which case the disk that
         filename in stored upon is used.
 
-    Filesystem::DiskFree->avail($id)
+    Filesys::DiskFree->avail($id)
         Returns the amount of available space in bytes for $id, which is a
         scalar containing the device name of a disk or a filename, in which
         case the disk that filename in stored upon is used.
 
-    Filesystem::DiskFree->total($id)
+    Filesys::DiskFree->total($id)
         Returns the amount of total space in bytes for $id, which is a
         scalar containing the device name of a disk or a filename, in which
         case the disk that filename in stored upon is used.
 
-    Filesystem::DiskFree->used($id)
+    Filesys::DiskFree->used($id)
         Returns the amount of used space in bytes for $id, which is a scalar
         containing the device name of a disk or a filename, in which case
         the disk that filename in stored upon is used.
